--- a/app/src/main/res/layout-land/activity_splash.xml
+++ b/app/src/main/res/layout-land/activity_splash.xml
@@ -21,7 +21,7 @@
         />
 
     <ProgressBar
-        android:id="@+id/progress_bar"
+        android:id="@+id/progress_Bar"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginTop="10dp"
