--- a/app/src/main/res/layout-land/activity_create_account.xml
+++ b/app/src/main/res/layout-land/activity_create_account.xml
@@ -54,6 +54,7 @@
         android:hint="@string/enter_email"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/my_primary"
         android:textColor="@color/primary_dark"
         app:layout_constraintTop_toBottomOf="@+id/tittle_desc"
         tools:layout_editor_absoluteX="0dp" />
@@ -67,6 +68,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:inputType="textPassword"
+        android:backgroundTint="@color/my_primary"
         android:hint="@string/password_confirmation"
         android:textColor="@color/primary_dark"
         app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
@@ -80,6 +82,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/my_primary"
         android:hint="@string/confirm_password"
         android:inputType="textPassword"
         android:textColor="@color/primary_dark"
