--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/primary_light"
     tools:context=".CreateAccountActivity">
 
 
@@ -70,6 +71,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:textColor="@color/primary_dark"
+        android:backgroundTint="@color/my_primary"
         app:layout_constraintTop_toBottomOf="@+id/email_text_view"
         tools:layout_editor_absoluteX="0dp" />
 
@@ -95,6 +97,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:inputType="textPassword"
+        android:backgroundTint="@color/my_primary"
         android:hint="@string/password_confirmation"
         android:textColor="@color/primary_dark"
         app:layout_constraintTop_toBottomOf="@+id/password_text_view"
@@ -122,6 +125,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:hint="@string/password_confirmation"
+        android:backgroundTint="@color/my_primary"
         android:inputType="textPassword"
         android:textColor="@color/primary_dark"
         app:layout_constraintTop_toBottomOf="@+id/confirm_password_text_view"
