--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -67,6 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:hint="@string/enter_email"
+        android:backgroundTint="@color/my_primary"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:textColor="@color/primary_dark"
@@ -93,6 +94,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginStart="16dp"
+        android:backgroundTint="@color/my_primary"
         android:layout_marginEnd="16dp"
         android:inputType="textPassword"
         android:hint="@string/password_confirmation"
