modified NoteDetailsActivity class.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,15 +9,24 @@
     android:padding="16dp"
     tools:context=".MainActivity">
 
-<com.google.android.material.floatingactionbutton.FloatingActionButton
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/add_note_btn"
-    android:backgroundTint="@color/my_primary"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentEnd="true"
-    app:tint="@color/white"
-    android:src="@drawable/ic_baseline_add_24"/>
+    <TextView
+        android:id="@+id/tap_btn_text"
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="230dp"
+        android:layout_marginEnd="16dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:scrollbarAlwaysDrawVerticalTrack="true"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:textSize="20sp"
+        android:fontFamily="@font/inter_light"
+        android:gravity="center"
+        android:text="@string/tap" />
 
 
 
