--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -21,11 +21,11 @@
         />
 
     <ProgressBar
-        android:id="@+id/progress_Bar"
+        android:id="@+id/progressBar"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginTop="10dp"
-        android:indeterminateTint="@color/progress_bar"
+        android:indeterminateTint="@color/progress_bar_color"
         />
 
 </LinearLayout>
